--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-md-4 col-lg-4">
                     <div class="card" style="width: auto;">
-                        <img src="/img/desafio1.png" class="card-img-top" alt="...">
+                        <img src="img/desafio1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Desafio 1</h5>
                             <p class="card-text">Mi CV en HTML</p>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-md-4 col-lg-4">
                     <div class="card" style="width: auto;">
-                        <img src="/img/desafio2.png" class="card-img-top" alt="...">
+                        <img src="img/desafio2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Desafio 2</h5>
                             <p class="card-text">Estilos con CSS</p>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card" style="width: auto;">
-                        <img src="/img/desafio3.png" class="card-img-top" alt="...">
+                        <img src="img/desafio3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Desafio 3</h5>
                             <p class="card-text"> Posicionamiento con CSS</p>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="col-md-4 col-lg-4">
                     <div class="card" style="width: auto;">
-                        <img src="/img/desafio4.png" class="card-img-top" alt="...">
+                        <img src="img/desafio4.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Desafio 4</h5>
                             <p class="card-text">Aprendiendo a usar bootstrap</p>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="col-md-4 col-lg-4">
                     <div class="card" style="width: auto;">
-                        <img src="/img/desafio5.png" class="card-img-top" alt="...">
+                        <img src="img/desafio5.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Desafio 5</h5>
                             <p class="card-text">Primer fork y commit en Github </p>
